--- a/SignallingSimulator/mainGUI.ui
+++ b/SignallingSimulator/mainGUI.ui
@@ -130,11 +130,29 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="CurrentHeadcode">
-           <property name="text">
-            <string>HeadCode: Not Selected</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QLabel" name="CurrentHeadcode">
+             <property name="text">
+              <string>HeadCode: Not Selected</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="ZoomToTrainButton">
+             <property name="text">
+              <string>Zoom To Train</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="Line" name="line">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </widget>
